[tool.poetry]
name = "recoverpy"
version = "2.0.0"
description = "A TUI to recover overwritten or deleted data."
authors = ["PabloLec <pablo.lecolinet@gmail.com>"]
license = "GPL-3.0 License"
readme = "README.md"
homepage = "https://github.com/PabloLec/recoverpy"
repository = "https://github.com/PabloLec/recoverpy"
documentation = "https://github.com/PabloLec/recoverpy#readme"
keywords = ["data",
            "recovery",
            "search",
            "cli",
            "console",
            "cui",
            "tui",
            "terminal",
            "cybersec",
            "cybersecurity",
            "security",
            "pentesting",
            "grep",
            "linux",
            "unix"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Operating System :: POSIX :: Linux",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ]
include = ["recoverpy/config.yaml"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
py-cui-fork = "^0.0.2"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
pytest = "^7.0.1"
pylint = "^2.13.9"
isort = "^5.10.1"
black = "^22.8"
pre-commit = "^2.17.0"
darglint = "^1.8.1"
pytest-mock = "3.6.1"
pytest-cov = "^4.0.0"
coverage-badge = "^1.1.0"
mypy = "^0.971"
types-PyYAML = "^6.0.12"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.6
ignore_missing_imports = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
